--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,50 @@ nav.header_nav li{
 
 nav.header_nav{
 	float: right;
+	margin-right: 16%;
 }
+
+nav.header_nav a.active{
+border-bottom: 75px;
+border-bottom:solid;
+color: red;
+padding-bottom: 5px;
+}
+
+figure{
+	position: relative;
+}
+
+figcaption{
+	position: absolute;
+	top:0;
+	left:0;
+	background:#000;
+	color:#fff;
+	font-size: 24px;
+	opacity:0;
+	width: 100%;
+	height:100%;
+}
+
 h1, h2, h3{
 	font-family: "Teko";
 	font-size: 40px;
 	text-transform: uppercase;
 	color: #000;
 }
+
+h3{
+	font-family: "Teko";
+	font-size: 40px;
+	text-transform: uppercase;
+	color: #000;
+	left:50%;
+	right:50%;
+	transform-translate
+}
+
+
 
 h1{
 	font-size: 120px;
@@ -54,8 +91,16 @@ a{
 	z-index: 100;
 }
 
+.tes_head{
+	margin: 0 auto;
+	max-width: 1170px;
+	width: 70%;
+}
+
 .logo{
+	display: inline-block;
 	float: left;
+	margin-right: 12pt;
 }
 
 .explore {
@@ -118,6 +163,7 @@ a{
 }
 
 
+
 .my img{
 	width:700px;
 	height:434px;
@@ -139,12 +185,12 @@ a{
 
 
 .share {
+	clear: both;
 	width: 100%;
 	text-align: center;
 	background-color: #ff3333;
 	padding:60px 0;
 }
-
 
 }
 
@@ -161,18 +207,22 @@ a{
 	margin-bottom: 45px;
 }
 
-.show_more {
-	clear: both;
+.show{
 	padding-top: 60px;
 	text-align: center;
 	font-size: 20px;
-	letter-spacing: 1.2px;
 	margin-bottom: 75px;
+	letter-spacing: 1.2px;
+	
 }
 
-.show_more a {
+.show{
 	color: #f63c3c;
-	border-bottom: 4px solid #f63c3c;
+}
+
+.show a {
+	color: #f63c3c;
+	border-bottom: 1px solid #f63c3c;
 }
 
 .button{
@@ -185,27 +235,42 @@ a{
 	color: #666666;
 }
 
+.social{
+	margin-top: 60px;
+	margin-left: 250px;
+}
+.social .box p {
+	padding: 10px 0 60px;
+}
 
 .social .box li {
 	display: inline-block;
-	background-color: #333333;
-	padding: 61px 75px;
+	background-color: #30282a;
+	padding: 60px 70px;
 	margin-right: 12px;
-
 	font-size: 30px;
+	letter-spacing: 1.2px;
+}
+
+.social .box li:last-child{
+	margin-right: none;
 }
 
 .social .box li a {
-	color: white;
+	color: #fff;
 }
 
-.social p{
-margin-bottom: 30px;
-
-}
-.social .box i {
+.social.box li {
 	display: block;
 	text-align: center;
 	font-size: 35px;
+}
+
+.cop{
+	margin-top: 80px;
+	margin-bottom: 40px;
+	color: #a6a6a6;
+	font-size: 13px;
+	margin-left: 250px;
 }
 
